// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginContainer handleLoginSubmit calls fetchLogin correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <LoginContainer
    actions={
      Object {
        "fetchLogin": [MockFunction],
      }
    }
    state={
      Object {
        "fetchLoginRequestStatus": null,
      }
    }
  />
</Router>
`;

exports[`LoginContainer render should NOT redirect if fetchLoginRequestStatus is pending 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <LoginContainer
    actions={
      Object {
        "fetchLogin": [MockFunction],
      }
    }
    state={
      Object {
        "fetchLoginRequestStatus": "pending",
      }
    }
  />
</Router>
`;

exports[`LoginContainer render should NOT redirect if fetchLoginRequestStatus is rejected 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <LoginContainer
    actions={
      Object {
        "fetchLogin": [MockFunction],
      }
    }
    state={
      Object {
        "fetchLoginRequestStatus": "rejected",
      }
    }
  />
</Router>
`;

exports[`LoginContainer render should redirect if fetchLoginRequestStatus is success 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <LoginContainer
    actions={
      Object {
        "fetchLogin": [MockFunction],
      }
    }
    state={
      Object {
        "fetchLoginRequestStatus": "success",
      }
    }
  />
</Router>
`;
